[package]
name = "garibaldka-server"
version = "0.1.0"
authors = ["hgonomeg <hgonomeg@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "*"
rand = "*"
serde_json = "*"
lazy_static = "*"

[[bin]]
name = "garibaldka_server"
path = "src/main.rs"

[lib]
name = "server_client"
path = "src/server_client.rs"
crate-type = ["staticlib"]